--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
   <div class="wrapper"> 
     <div class="row">
       <div class="column" style="background-color: hsl(31, 77%, 52%);" >
-        <img src="images/icon-sedans.svg" class="img">
+        <img src="images/icon-sedans.svg">
         <h1 >SEDANS</h1>
           <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
           <button type="button" class="button1">Learn More</button>
       </div>
       <div class="column" style="background-color:hsl(184, 100%, 22%);">
-        <img src="images/icon-suvs.svg" class="img">
+        <img src="images/icon-suvs.svg">
         <h1>SUVS</h1>
           <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
           <button type="button" class="button2">Learn More</button>
       </div>
       <div class="column" style="background-color:hsl(179, 100%, 13%);">
-        <img src="images/icon-luxury.svg" class="img">
+        <img src="images/icon-luxury.svg">
         <h1>LUXURY</h1>
           <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
           <button type="button" class="button3">Learn More</button>
